<resources>
    <string name="app_name">Smart Apartment Manager</string>
    <string name="pass">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="name">Name</string>
    <string name="account">Account Type</string>
    <string name="gender">Gender</string>
    <string name="pic">NID Image</string>
    <string name="nid">NID Number</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="please_wait">Please Wait</string>
    <string name="send_to">Send to</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="notes">Note :please check valid identity proof
of guest before check-in </string>
</resources>