<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_layout">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/ll1"
            android:layout_margin="10dp"
            android:layout_below="@+id/toolbar_layout"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_name"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_person_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextRegisterName"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/ll2"
            android:layout_margin="10dp"
            android:layout_below="@+id/ll1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_cell"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_phone_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhone"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextRegisterPhone"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll3"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ll2"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_lock_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextRegisterPassword"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll4"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ll3"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_account_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textAccountType"
                style="@style/parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextAccountName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:focusable="false"
                    android:hint="@string/account"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll5"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ll4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_gender_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textGender"
                style="@style/parent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextGender"
                    android:inputType="text"
                    android:maxLines="1"
                    android:focusable="false"
                    android:hint="@string/gender"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/ll6"
            android:layout_margin="10dp"
            android:layout_below="@+id/ll5"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_nid"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_nid_number_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNid"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextNid"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/nid"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/ll7"
            android:layout_margin="10dp"
            android:layout_below="@+id/ll6"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_nid_pic"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_nid_photo_black"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputNidPic"
                style="@style/parent">

                <EditText
                    android:id="@+id/editTextNidPic"
                    style="@style/modifiedNewEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/pic"
                    android:focusable="false"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/cirLoginButton"
            style="@style/registerButton"
            android:text="@string/register"
            android:layout_below="@+id/ll7"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="12"
            android:id="@+id/ll8"
            android:layout_below="@+id/cirLoginButton"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a user?"
                android:layout_weight="6"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll9"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/ll8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:text="Do you have an account?" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/login" />
        </LinearLayout>
    </RelativeLayout>


</ScrollView>